<resources>
    <string name="view_report">View report</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="look">Look</string>
    <string name="mark_text_view">Mark</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="import_json">Import</string>
</resources>